fix(header): fix for sticky hover on mobile devices.

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -626,13 +626,16 @@ body.no-scroll {
     padding: core.$space-m core.$space-xxl;
     text-decoration: none;
     font-size: core.$space-m;
-    color: core.$black; // Keeping as literal
+    color: core.$black;
     position: relative;
     font-weight: 400;
 
-    &:hover {
-      color: core.$black; // Keeping as literal
-      background-color: core.$grey-50; // Keeping as literal
+    // Stops the mobile double tap issue where the first tap applies hover styles and the second tap activates the next link
+    @media (hover: hover) {
+      &:hover {
+        color: core.$black;
+        background-color: core.$grey-50;
+      }
     }
   }
 
@@ -698,8 +701,10 @@ body.no-scroll {
   .uq-header__nav-mobile-secondary-item {
     background-color: core.$purple-600;
 
-    &:hover {
-      background-color: core.$purple-600;
+    @media (hover: hover) {
+      &:hover {
+        background-color: core.$purple-600;
+      }
     }
   }
 
@@ -707,9 +712,11 @@ body.no-scroll {
     color: core.$white;
     padding: core.$space-s core.$space-l;
 
-    &:hover {
-      color: core.$purple-600;
-      background-color: core.$white;
+    @media (hover: hover) {
+      &:hover {
+        color: core.$purple-600;
+        background-color: core.$white;
+      }
     }
   }
 
@@ -733,13 +740,15 @@ body.no-scroll {
     background-color: core.$purple-500;
     font-weight: core.$font-weight-medium;
 
-    &:hover {
-      color: core.$purple-500;
-      background-color: core.$white;
+    @media (hover: hover) {
+      &:hover {
+        color: core.$purple-500;
+        background-color: core.$white;
 
-      .slide-menu__decorator::before {
-        content: "";
-        background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M4%2012L19%2012%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M14%2018L20%2012L14%206%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+        .slide-menu__decorator::before {
+          content: "";
+          background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M4%2012L19%2012%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cpath%20d%3D%22M14%2018L20%2012L14%206%22%20stroke%3D%22%2351247a%22%20stroke-width%3D%221.5%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+        }
       }
     }
 
